icon cut off fix

--- a/sites/all/themes/cyberhus/sass/_views.scss
+++ b/sites/all/themes/cyberhus/sass/_views.scss
@@ -488,7 +488,7 @@
     .ui-icon {
     	background: url("../img/next_yellow_down.png");
     	height: 15px;
-    	width: 13px;
+    	width: 14px;
     }
 
   }
@@ -662,7 +662,7 @@
 			padding-right: 1px;
 			background: url("../img/next_black.png");
 			height: 14px;
-			width: 14px;
+			width: 15px;
 		}
 
 	}
@@ -671,7 +671,7 @@
 		.ui-icon {
 			background: url("../img/next_yellow_down.png");
 			height: 15px;
-			width: 13px;
+			width: 14px;
 		}
 
 	}
